# duckpoc4

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  search_poc_schema.sql
orchestrator-service/: Dockerfile  main.py  requirements.txt
orchestrator-service/app/: __init__.py
orchestrator-service/app/api/: routes.py
orchestrator-service/app/core/: config.py
orchestrator-service/app/models/: schemas.py
orchestrator-service/app/services/: __init__.py  factory.py  http_service.py  interfaces.py  orchestrator.py  search_service.py  user_history_service.py
search-service/: Dockerfile  app.py  main.py  requirements.txt
search-service/app/: __init__.py
search-service/app/api/: routes.py
search-service/app/core/: config.py  exceptions.py
search-service/app/models/: schemas.py
search-service/app/services/: search_provider.py
user-history-service/: Dockerfile  app.py  main.py  requirements.txt
user-history-service/app/: __init__.py
user-history-service/app/api/: routes.py
user-history-service/app/core/: config.py
user-history-service/app/db/: database.py
user-history-service/app/models/: schemas.py
user-history-service/app/services/: history_service.py  user_service.py
